# play-later-v2

./: .dockerignore  .env.example  .eslintignore  .eslintrc.json  .gitignore  .lintstagedrc.json  .mcp.json  .npmrc  .prettierignore  AGENTS.md  CLAUDE.md  CONTEXT-MAP.md  DEPENDENCY_DECISIONS.md  GEMINI.md  Makefile  README.md  auth.ts  bun.lockb  components.json  docker-compose.yml  env.mjs  env.ts  eslint.config.flat.js.backup  eslint.config.js  eslint.config.mjs  lefthook.yml  middleware.ts  next.config.mjs  next.config.ts  package.json  plan.md  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  prettier.config.mjs  providers.tsx  skills-lock.json  tailwind.config.js  tailwind.config.ts  (+5 more)
.awos/commands/: architecture.md  implement.md  linear.md  roadmap.md  spec.md  tasks.md  tech.md
.awos/subagents/: e2e-testing-expert.md  nextjs-backend-expert.md  nextjs-ui-expert.md  testing-expert.md
.claude/: settings.json
.claude/agents/: aws-infra.md  aws-terraform-advisor.md  nextjs-backend-expert.md  nextjs-expert.md  nextjs-fullstack.md  nextjs-ui-expert.md  prisma-database.md  python-architect.md  react-architect.md  react-frontend.md  review.md  tanstack-fullstack.md  testing.md  typescript-test-expert.md
.claude/commands/: prd.md
.claude/hooks/: check-sensitive-files.sh  format-and-lint.sh  test-gate.sh  typecheck.sh
.cursor/rules/: installing-libraries.md  nextjs.mdc
.github/: CODEOWNERS  dependabot.yml
.github/prompts/: architecture.prompt.md  implement.prompt.md  product.prompt.md  roadmap.prompt.md  spec.prompt.md  tasks.prompt.md  tech.prompt.md
.github/workflows/: deploy.yml  e2e.yml  integration.yml  pr-checks-tanstack.yml  pr-checks.yml
.husky/: pre-commit
__tests__/lib/: query.test.tsx  utils.test.ts
app/: layout.tsx  page.tsx
app/(app)/: layout.tsx
app/(protected)/: layout.tsx
app/backlog/: page.tsx
app/backlogs/: page.tsx
app/changelog/: page.tsx
app/collection/: error.tsx  loading.tsx  page.tsx
app/dashboard/: page.tsx
app/game/: page.tsx
app/login/: page.tsx
app/privacy-policy/: page.tsx
app/roadmap/: page.tsx
app/shared-wishlist/: page.tsx
app/wishlist/: page.tsx
components/: back-link.tsx  date-picker.tsx  google-sign-in.tsx  icons.tsx  logo.tsx  main-nav.tsx  mobile-nav.tsx  nav-link.tsx  providers.tsx  query-provider.tsx  render-when.tsx  sign-out.tsx  site-footer.tsx  site-header.tsx  theme-toggle.tsx  user-dropdown.tsx  user-settings.tsx
components/backlog/: backlog-item-card.tsx  complete-action-button.tsx  game-platform.tsx  move-to-backlog-action-button.tsx  start-playing-action-button.tsx  update-backlog-action.ts
components/game/: add-to-collection-modal.tsx
components/ui/: accordion.tsx  alert-dialog.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  carousel.tsx  checkbox.tsx  command.tsx  (+11 more)
config/: site.ts
context/: testing-analysis-2025.md  testing-refactoring-strategy.md
data/: games.ts
docs/: README.md  api-integration.md  authentication.md  cutover-rollback.md  database-schema.md  feature-architecture.md  index.md  ui-components.md
documentation/: 01-codebase-improvement-overview.md  02-server-actions-standardization.md  03-authentication-security-patterns.md  04-error-handling-standardization.md  05-testing-strategy-implementation.md  06-type-safety-validation-improvements.md  07-database-query-optimization.md  08-caching-performance-strategies.md  09-monitoring-observability-implementation.md  ai-assisted-prd-workflow.md
e2e/: home.spec.ts
infra/: CLAUDE.md  LAMBDA_EVENT_SOURCE_MAPPING.md  README.md
lambdas-py/: .env.example  .env.integration.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
lambdas-py/src/lambdas/: config.py  errors.py  logging.py
lambdas-py/src/lambdas/clients/: igdb.py  s3.py  steam.py
lambdas-py/src/lambdas/handlers/: __init__.py  database_import.py  hello.py  igdb_enrichment.py  steam_import.py
lambdas-py/src/lambdas/models/: db.py  igdb.py  steam.py
lambdas-py/src/lambdas/services/: __init__.py  classifier.py  database.py
lambdas-py/tests/: conftest.py
lambdas-py/tests/integration/: README.md  conftest.py  test_database_integration.py  test_full_pipeline_integration.py  test_igdb_client_integration.py  test_steam_client_integration.py
lambdas-py/tests/unit/: test_classifier.py  test_database_import_handler.py  test_hello_handler.py  test_igdb_client.py  test_igdb_enrichment_handler.py  test_s3_client.py  test_steam_client.py  test_steam_import_handler.py
lambdas-py/tests/unit/services/: test_database.py
lib/: auth.ts  fonts.ts  hltb-search.ts  igdb-api.ts  prisma.ts  query.ts  utils.ts
playwright-report/: index.html
prisma/: client.ts  schema.prisma
savepoint-app/: .env.example  .env.test  .prettierignore  README.md  SECURITY.md  auth.better.ts  auth.ts  components.json  env.mjs  eslint.config.mjs  knip.config.ts  middleware.ts  next.config.mjs  package.json  playwright.config.ts  prisma.config.ts  proxy.test.ts  proxy.ts  tsconfig.json  vercel.json  vitest.config.ts  vitest.coverage.config.ts
savepoint-tanstack/: .cta.json  .env.example  .prettierignore  CLAUDE.md  CONTEXT.md  DIVERGENCES.md  FOOT-GUNS.md  README.md  components.json  env.ts  eslint.config.mjs  package.json  prettier.config.mjs  prisma.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: README.md  check-package-freshness.mjs  init-localstack.sh  localstack-cors.json  package-freshness-allowlist.json
shared/: globals.css
styles/: globals.css
test/: README.md  setup.ts  utils.tsx
types/: igdb.ts  library.ts  nav.ts  ui.ts
videos/: picker.mov.json
(+3994 files in other folders)
