[project]
name = "aws-lambdas-pipeline"
version = "0.1.0"
description = "Steam Library Import Pipeline - AWS Lambda Functions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiolimiter>=1.1.0,<2.0",
    "boto3>=1.35.0,<2.0",
    "httpx>=0.27.0,<0.28",
    "pydantic>=2.9.0,<3.0",
    "pydantic-settings>=2.5.0,<3.0",
    "sqlalchemy>=2.0.0,<3.0",
    "psycopg2-binary>=2.9.0,<3.0",
    "structlog>=24.0.0,<25.0",
    "tenacity>=9.0.0,<10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lambdas"]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
    "pytest-cov>=5.0.0,<6.0",
    "ruff>=0.6.0,<1.0",
    "mypy>=1.11.0,<2.0",
    "moto[s3]>=5.0.0,<6.0",
    "boto3-stubs[s3]>=1.35.0,<2.0",
    "respx>=0.21.0,<1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/**/*.py" = ["ARG"]  # unused arguments in tests (fixtures)

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
plugins = ["pydantic.mypy"]

[tool.pydantic-plugin]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src/lambdas",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests with mocked dependencies",
    "integration: Integration tests requiring external services",
    "slow: Slow tests that may take 30-60 seconds",
]

[tool.coverage.run]
source = ["src/lambdas"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
